--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,9 @@
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
     <string name="action_settings">Settings</string>
+    <string name="start">start</string>
+    <string name="refresh">刷新加载</string>
+    <string name="snackbar">Snackbar</string>
+    <string name="please_write">please write</string>
+    <string name="exercise">Exercise</string>
 </resources>
